manifests/chat-cli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-cli
  template:
    metadata:
      labels:
        app: chat-cli
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: cli
        image: 192.168.226.1:5000/cybwan/chat:0.1.1
        imagePullPolicy: IfNotPresent
        command: [ "sleep", "365d" ]
