manifests/fgw1.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fgw1
  labels:
    app: fgw1
spec:
  selector:
    matchLabels:
      name: fgw1
  template:
    metadata:
      labels:
        name: fgw1
        app: fsm-gateway
        gateway.flomesh.io/ns: fsm-system
    spec:
      containers:
        - name: outbound
          image: 192.168.226.1:5000/flomesh/pipy-nightly:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-outbound-1
              containerPort: 15001
          command:
            - pipy
            - -e
            - |
              pipy()
              .listen(15001)
              .serveHTTP(new Message('hi, it works as fgw1 outbound listener.\n'))
        - name: inbound
          image: 192.168.226.1:5000/flomesh/pipy-nightly:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-inbound-1
              containerPort: 15003
          command:
            - pipy
            - -e
            - |
              pipy()
              .listen(15003)
              .serveHTTP(new Message('hi, it works as fgw1 inbound listener.\n'))
