manifests/flomesh-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flomesh-demo
  name: flomesh-demo
  namespace: iflorens-test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flomesh-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flomesh-demo
    spec:
      containers:
      - args:
        - -f
        - /dev/null
        command:
        - tail
        image: localhost:5000/flomesh-test/flomesh-demo:v2.3
        imagePullPolicy: Always
        name: flomesh-demo-container
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /conf
          name: flomesh-demo-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: flomesh-demo-configmap
        name: flomesh-demo-config
