manifests/consul.1.5.3.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul
  labels:
    name: consul
spec:
  type: LoadBalancer
  selector:
    app: consul
  ports:
    - name: http
      port: 8500
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: 192.168.226.1:5000/consul:1.5.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8500
