manifests/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 80
    appProtocol: http
    targetPort: 8080
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      serviceAccountName: httpbin
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: httpbin
        image: 192.168.226.1:5000/flomesh/pipy-nightly:latest
        imagePullPolicy: IfNotPresent
        command:
          - pipy
          - -e
          - |
            pipy()
            .listen(8080)
            .serveHTTP(new Message('Hi, I am native httpbin by pipy!\n'))
        ports:
        - containerPort: 8080
      - name: curl
        image: 192.168.226.1:5000/cybwan/ubuntu:22.04
        imagePullPolicy: IfNotPresent
        command: [ "sleep", "365d" ]
