manifests/pipy-ok.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipy-ok
  labels:
    app: pipy-ok
    service: pipy-ok
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: pipy-ok
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipy-ok
  labels:
    app: pipy-ok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipy-ok
  template:
    metadata:
      labels:
        app: pipy-ok
    spec:
      containers:
        - name: pipy
          image: flomesh/pipy-nightly:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          command:
            - pipy
            - -e
            - |
              pipy()
              .listen(8080)
              .serveHTTP(new Message('Hi, I am pipy ok!'))
