manifests/zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  type: LoadBalancer
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: 192.168.226.1:5000/zookeeper:3.6.2
          ports:
            - containerPort: 2181
        - name: zookeeper-web
          image: 192.168.226.1:5000/tobilg/zookeeper-webui:latest
          ports:
            - containerPort: 8081
