manifests/httpbin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-outbound
spec:
  hostnames:
    - httpbin
    - httpbin.mesh-in
    - httpbin.mesh-in.svc
    - httpbin.mesh-in.svc.cluster.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: node-sidecar
      namespace: fsm-system
      port: 15001
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: httpbin
          port: 80
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
